# anker2

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md  start_app.sh  start_simple.sh  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted--Portfolio-Chart-Data-Debug-index-BCsRkaid-js-413-6665-Transactions-id-52bbb3-1760084444398_1760084444400.txt  Pasted--Portfolio-Chart-Data-Debug-index-h0DUYPNR-js-408-6085-Transactions-id-ab0ff4-1759316060120_1759316060121.txt  Pasted--id-c12e4eea-8cdd-422f-b289-2d5816a21147-pair-BNB-ZAR-price-11446-42-open-114-1759159980393_1759159980394.txt  Pasted-TEST-SEND-called-send-tsx-314-No-user-ID-available-for-test-balance-display-tsx-28-GET-https-2c8-1757508958233_1757508958234.txt  Pasted-import-React-useMemo-useState-from-react-import-ResponsiveContainer-LineChart--1757062013679_1757062013680.txt  Pasted-import-useState-useEffect-from-react-import-useForm-from-react-hook-form-import-zod-1759150789366_1759150789367.txt  Pasted-import-useState-useEffect-from-react-import-useQuery-useMutation-useQueryClient-from--1758203505196_1758203505197.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ObjectUploader.tsx
client/src/hooks/: useProfile.ts  useWallets.ts
client/src/lib/: auth.tsx  queryClient.ts  walletGenerator.ts
client/src/pages/: activity.tsx  create-wallet.tsx  exchange.tsx  explore.tsx  help.tsx  (+11 more)
server/: auth_handlers.py  auth_utils.py  blockchain.py  handlers.py  init_db.sql  models.py  server.py  storage.py  storage_postgres.py
shared/: schema.ts
(+22 files in other folders)
